Change css navigation , directory in mobile and add css for tablet

--- a/cpskin/diazotheme/spirit/static/less/liege.less
+++ b/cpskin/diazotheme/spirit/static/less/liege.less
@@ -604,6 +604,10 @@ font-size:95%;
     width: 80px;
     height: auto;
 }
+.bloc-adresse img:last-child {
+    width: 36%;
+    margin-left: 5%;
+}
 #footer-social {
     margin: 0 auto;
     max-width: calc(32.8333333333%);
@@ -613,4 +617,8 @@ font-size:95%;
 //mobile
 .advb-submenu .advb-title {
     background-color: #404040;
+}
+//annuaire service
+.subsection-services-communaux-annuaire-services .photoAlbumEntryWrapper img {
+    display: none;
 }
