--- a/cpskin/diazotheme/spirit/static/less/mobilelarge.less
+++ b/cpskin/diazotheme/spirit/static/less/mobilelarge.less
@@ -15,8 +15,11 @@ body {
 #top-logo {
     margin-left: 0em;
 }
- .main-homepage #top-logo-slogan-actions-inner #search-wrapper{
+.main-homepage #top-logo-slogan-actions-inner #search-wrapper{
     top:100px;
+}
+.select2-container .select2-choice .select2-arrow b{
+   background-image: none !important;
 }
 #portal-footer-wrapper #footer-social > div{
     max-width: 100%;
@@ -52,6 +55,15 @@ body {
         left: 10px;
         margin-top: -5.6em;
         max-width: 97%;
+    }
+    .theme1 a::before {
+        right: 65%;
+    }
+    .theme2 a::before {
+        right: 65%;
+    }
+    .theme3 a::before {
+        right: 65%;
     }
     // bloc zoom
     #accueil .bloc-document .zoom .img img {
@@ -159,9 +171,12 @@ body {
         display: flex;
         flex-flow: row nowrap;
         position: absolute !important;
-        top: 20%;
+        top: 80%;
         width: 100%;
         justify-content: space-between;
+    }
+    .main-homepage .slider-multiple .voir-tout {
+        margin-top: 35px;
     }
     .main-homepage .titre-rss{
         padding-left: 0;
@@ -329,6 +344,15 @@ body {
         left: 10px;
         margin-top: -5.6em;
         max-width: 97%;
+    }
+    .theme1 a::before {
+        right: 76%;
+    }
+    .theme2 a::before {
+        right: 76%;
+    }
+    .theme3 a::before {
+        right: 76%;
     }
     .main-homepage #nav-wrapper ul.navTreeLevel0{
         top: -3.2em;
