--- a/cpskin/diazotheme/spirit/static/less/variables.less
+++ b/cpskin/diazotheme/spirit/static/less/variables.less
@@ -7,11 +7,11 @@
 @width-content: 1200px;
 @nav-transparent: transparent;
 @nav-opaticy:rgba(0, 0, 0, 0.5);
-@nav-background: #ffffff;
+@nav-background: #f1efef;
 @size-day-month: 80px;
 @border-radius-input: 7px;
 @input-height: 35px;
-@slider-background:#eaeaea;
+@slider-background:#fff;
 @voir-tout-black:#262626;
 @bg-nav-fac: #f1efef;
 
