--- a/cpskin/diazotheme/spirit/static/less/styles.less
+++ b/cpskin/diazotheme/spirit/static/less/styles.less
@@ -7,6 +7,9 @@ h1, h2, h3, h4, h5, h6, #portal-globalnav li a {
     position: relative;
     z-index: inherit;
 }
+.portaltype-plone-site.userrole-authenticated #portal-top {
+    height: 780px;
+}
 .main-homepage #portal-top{
     position: relative;
 }
@@ -668,6 +671,9 @@ dl.actionMenu.activated dt a{
 .agenda .bloc-rss {
     display: none;
 }
+.agenda .titre h2{
+    color: @black;
+}
 .agenda .results ul .bloc-item {
     float: none;
     min-height: calc(155px);
@@ -738,20 +744,18 @@ dl.actionMenu.activated dt a{
 #slider-a-la-une.flexslider .flex-caption p a {
     line-height: 2em;
 }
-
-#slider-a-la-une.flexslider .flex-caption p a::before {
-    content: "Lire la suite";
-    position: absolute;
-    display: block;
-    background: #d7004e;
-    bottom: 0;
-    z-index: 1;
-    padding: 1.25em;
-    color: white;
-    font-weight: bold;
-    font-size: 80%;
+#content #accueil .flexslider .slides>li{
+    position: relative;
 }
-
+#slider-a-la-une .read-next-link{
+    display: block;
+    position: absolute;
+    bottom: 0;
+    margin-left: 2em;
+    padding: 1em;
+    background: #d7004e;
+    color: #ffffff;
+}
 #slider-a-la-une.flexslider .flex-caption::after {
     content: "";
     background: linear-gradient(to bottom,transparent ,#000, #000);
@@ -904,6 +908,41 @@ dl.actionMenu.activated dt a{
     margin: 20px;
     right: 0;
 }
+// section-evenements subsection-agenda
+// pagination
+.faceted-results div .pagination.listingBar:first-child{
+    display: none;
+}
+#faceted-results div.listingBar{
+    float: right;
+    margin-right: -0.75em;
+}
+#content #faceted-results .listingBar a,
+#content #faceted-results .listingBar a:last-child,
+#faceted-form #center-content-area #faceted-results .listingBar a:hover:last-child{
+    border: none;
+}
+#faceted-form #center-content-area #faceted-results .listingBar a:hover{
+    border-bottom: none;
+    border-top: none;
+    border-left: none;
+    border-right: 1px solid #dedede;
+    color: @pagination-color-current !important;
+}
+.pagination.listingBar .current{
+    color: @pagination-color-current;
+    border-right: 1px solid #dedede;
+    padding: 0.25em 0.5em;
+    font-size: 1.5em;
+}
+#content #faceted-results .listingBar a{
+    color: @black;
+    border-right: 1px solid #dedede;
+    font-size: 1.5em;
+}
+#content #faceted-results .listingBar .next{
+    display: none;
+}
 //icone
 .icone-container {
     margin: 5em 0;
@@ -967,12 +1006,14 @@ dl.actionMenu.activated dt a{
     right: 90%;
 }
 .videos-container {
-    margin-left: -17%;
+    margin-left: -20%;
     margin-top: 10%;
     padding-left: 0;
+    width: 68%;
 }
 .videos-container > h2 {
     text-align: right;
+    max-width: 98%;
 }
 .videos > li {
     width: 800px;
