--- a/cpskin/diazotheme/spirit/static/less/liege.less
+++ b/cpskin/diazotheme/spirit/static/less/liege.less
@@ -158,6 +158,14 @@ dl.portletNavigationTree dt.portletHeader a{
 .icon-sendtomanager::before {
     background: #d7004e;
 }
+#social-share::after{
+    color:  #fff;
+    margin-top: 0.25em;
+    margin-left: 0;
+    padding: 1em;
+    background: #d7004e;
+    width: 1em;
+}
 //Columns
 div.width-1\:4 {
     width: 26.75%;
@@ -526,6 +534,7 @@ fieldset#form-groups-related_contacts,
 .footer-bloc.bloc-lien li{
    display:list-item;
    line-height: 2em;
+   margin-left: -0.2em;
 }
 .footer-bloc.bloc-lien {
     padding: 0 0 0 3em;
@@ -574,7 +583,7 @@ font-size:95%;
     height: auto;
 }
 .bloc-adresse img:last-child {
-    width: 36%;
+    width: 45%;
     margin-left: 5%;
 }
 
