--- a/cpskin/diazotheme/spirit/static/less/mobile.less
+++ b/cpskin/diazotheme/spirit/static/less/mobile.less
@@ -17,7 +17,7 @@
 }
 #top-slogan {
     margin-left: -1em;
-    margin-bottom: 1.5em;
+    margin-bottom: 0.5em;
 }
 #cpskin-slogan-description {
     font-size: 94%;
@@ -36,6 +36,9 @@
    left: -240%;
 }
 // bloc zoom
+#accueil .bloc-document .zoom{
+   margin: 1em 0;
+}
 #accueil .bloc-document .zoom .img img {
     height: auto !important;
     max-width: 100% !important;
@@ -55,6 +58,9 @@
     display: none !important;
 }
 // Agenda
+.agenda{
+   margin-top: 0;
+}
 .agenda .results ul .bloc-item h3,
 .agenda .results ul .bloc-item .description {
     margin-left: 0;
@@ -74,41 +80,55 @@
     text-align: center;
 }
 // Agenda vue
-.section-evenements.subsection-agenda .faceted-top-widgets {
+.section-evenements.subsection-agenda .faceted-top-widgets,
+.collection-event .faceted-top-widgets{
     display: flex;
     flex-flow: column nowrap;
     padding: 1em;
 }
-.section-evenements.subsection-agenda .faceted-top-widgets .faceted-widget {
+.section-evenements.subsection-agenda .faceted-top-widgets .faceted-widget,
+.collection-event .faceted-top-widgets .faceted-widget{
     float: none;
 }
-.section-evenements.subsection-agenda .widget-fieldset legend {
+.section-evenements.subsection-agenda .widget-fieldset legend,
+.collection-event .widget-fieldset legend{
     float: none;
 }
-.section-evenements.subsection-agenda .widget-fieldset form {
+.section-evenements.subsection-agenda .widget-fieldset form,
+.collection-event .widget-fieldset form{
     flex-flow: column wrap;
 }
-.section-evenements.subsection-agenda .faceted-daterange-widget-form div {
+.section-evenements.subsection-agenda .faceted-daterange-widget-form div,
+.collection-event .faceted-daterange-widget-form div {
     margin-bottom: 0.5em;
 }
-.section-evenements.subsection-agenda .event-entry {
+.section-evenements.subsection-agenda .faceted-agenda-ungrouped-view,
+.collection-event .faceted-agenda-ungrouped-view{
+   width: 100%;
+}
+.section-evenements.subsection-agenda .event-entry,
+.collection-event .event-entry {
     display: flex;
     flex-flow: column nowrap;
     width: 100%;
     float: none !important;
 }
-.section-evenements.subsection-agenda .event-entry .pagecaption {
+.section-evenements.subsection-agenda .event-entry .pagecaption,
+.collection-event .event-entry .pagecaption{
     width: 100% !important;
 }
-.section-evenements.subsection-agenda .event-entry .pageleadImage {
+.section-evenements.subsection-agenda .event-entry .pageleadImage,
+.collection-event .event-entry .pageleadImage{
     padding-bottom: 100% !important;
     width: 100% !important;
     float: none !important;
 }
-.section-evenements.subsection-agenda .event-entry .pagecaption h3 {
+.section-evenements.subsection-agenda .event-entry .pagecaption h3 ,
+.collection-event .event-entry .pagecaption h3 {
     margin-top: 0;
 }
-.section-evenements.subsection-agenda .event-entry .documentByLine {
+.section-evenements.subsection-agenda .event-entry .documentByLine,
+.collection-event .event-entry .documentByLine{
     position: relative;
     float: right;
 }
@@ -147,6 +167,21 @@
 #top-logo-slogan-actions-inner {
     flex-flow: column wrap;
     order: 1;
+    padding: 0.5em 1em;
+}
+#top-actions-actions{
+   display: flex;
+   flex-direction: column;
+}
+#top-menu-actions{
+   order: 2;
+}
+#top-languages {
+    order: 1;
+    margin-bottom: 0.5em;
+}
+#portal-languageselector{
+   font-size: 100%;
 }
 #top-banner {
     order: 2;
@@ -178,6 +213,9 @@
 body {
     padding: 0 !important;
 }
+.main-homepage #portal-top::after{
+   display: none;
+}
 .main-homepage #portal-column-content{
     width: 100%;
 }
@@ -193,18 +231,6 @@ body {
 }
 .main-homepage .slider-carousel .flex-direction-nav li {
     background: #000000 !important;
-}
-.main-homepage #content #accueil .flexslider .slides>li{
-    position: relative;
-}
-.main-homepage #slider-a-la-une .read-next-link{
-    display: block;
-    position: absolute;
-    bottom: 0;
-    margin-left: 2em;
-    padding: 1em;
-    background: #d7004e;
-    color: #ffffff;
 }
 .main-homepage .icone-container {
     display: flex;
@@ -236,7 +262,8 @@ body {
 .main-homepage .icone-inner h3 a{
     color: #d7004e !important;
 }
-.main-homepage .slider-multiple .carousel.flexslider .flex-direction-nav, .slider-carousel .flex-direction-nav {
+.main-homepage .slider-multiple .carousel.flexslider .flex-direction-nav,
+.slider-carousel .flex-direction-nav {
     display: flex;
     flex-flow: row nowrap;
     position: absolute !important;
@@ -255,6 +282,9 @@ body {
 }
 .main-homepage .agenda .titre h2{
     padding-bottom: 0;
+    font-size: 2.5em;
+    text-transform: uppercase;
+    letter-spacing: 0.25em;
 }
 .main-homepage .agenda .results {
     padding: 0;
@@ -296,6 +326,12 @@ body {
     padding-bottom: 0 !important;
     padding-left: 0 !important;
 }
+.main-homepage #multimediaviewlet .albums-container {
+    margin: 2em 0 1.5em;
+}
+.main-homepage #multimediaviewlet .videos-container {
+   margin-bottom: 1.5em;
+}
 .main-homepage #multimediaviewlet .left {
     float: left;
     width: 100%;
@@ -303,12 +339,15 @@ body {
 .main-homepage #multimediaviewlet .lead-image-wrapper {
     width: 100%;
 }
-.main-homepage .section-notheme #multimediaviewlet h2, #multimediaviewlet h2{
-    position: absolute;
-    padding: 0.5em;
-    color: #FFFFFF !important;
-    z-index: 4;
-    background: #000000;
+.section-notheme #multimediaviewlet h2,
+#multimediaviewlet h2 {
+    font-size: 2.5em;
+    text-transform: uppercase;
+    text-align: center;
+}
+#multimediaviewlet .link-all::before{
+   height: 57px;
+   margin-top: 18px;
 }
 .main-homepage #multimediaviewlet .albums-container .link-all,
 .main-homepage #multimediaviewlet .videos-container .link-all{
@@ -321,6 +360,10 @@ body {
 }
 .main-homepage .iframe-responsive-wrapper .iframe-ratio{
     margin-bottom: 0;
+    max-width: 100%;
+}
+.main-homepage .iframe-responsive-wrapper iframe{
+   height: 99%;
 }
 .main-homepage .voir-tout{
     margin-top: -110px;
@@ -332,6 +375,22 @@ body {
 }
 .tileImage{
    display: inline-block;
+}
+#viewlet-below-content-body>div.relatedItems dl{
+   padding: 2em 0.2em;
+}
+.template-cpskin_navigation_view_with_leadimage .navigation-view-menu-description:hover,
+.template-cpskin_navigation_view_with_leadimage h2.navigation-view-menu-title:hover+.navigation-view-menu-description{
+   visibility: hidden;
+}
+.template-cpskin_navigation_view_with_leadimage a:hover h2{
+   bottom: 0;
+}
+.shown-right-panel #document-toc {
+    width: 13em;
+}
+.shown-right-panel {
+    width: 13em !important;
 }
 //vue faceted
 #faceted-form .faceted-top-widgets{
@@ -364,7 +423,7 @@ body {
     padding: 0.5em 0.5em 1em 0.5em;
 }
 #faceted-form input[type="text"]{
-   width: 9em !important;
+   width: 8em !important;
 }
 #faceted-form .faceted_select {
     max-width: 14em !important;
