add after to zoom on homepage

--- a/cpskin/diazotheme/spirit/static/less/mobile.less
+++ b/cpskin/diazotheme/spirit/static/less/mobile.less
@@ -43,6 +43,11 @@ body{
 .main-homepage.template-folderview #portal-top::after{
    z-index: -1;
 }
+.slider-carousel::after,
+.zoom-1::after,
+.zoom-2::after{
+   display: none;
+}
 // bloc zoom
 #accueil .bloc-document .zoom{
    margin: 1em 0;
