--- a/cpskin/diazotheme/spirit/static/less/mobilelarge.less
+++ b/cpskin/diazotheme/spirit/static/less/mobilelarge.less
@@ -105,6 +105,10 @@ ul.event.summary.details{
     #accueil .bloc-document .zoom .description {
         display: none !important;
     }
+    #accueil .zoom-1::after,
+    #accueil .zoom-2::after{
+        display: none;
+    }
     // Agenda
     .agenda .results ul .bloc-item h3,
     .agenda .results ul .bloc-item .description {
@@ -385,6 +389,11 @@ ul.event.summary.details{
     }
     #multimediaviewlet::after{
         top:32.4%;
+    }
+    .main-homepage .zoom-1::after,
+    .main-homepage .zoom-2::after{
+        top: 11.8em;
+        bottom: -51em;
     }
     //annuaire
     #content-core .contact-entry {
