--- a/cpskin/diazotheme/spirit/static/less/styles.less
+++ b/cpskin/diazotheme/spirit/static/less/styles.less
@@ -553,6 +553,11 @@ dl.actionMenu.activated dt a{
     width: 100%;
 }
 /* slider multiple */
+
+#accueil .slider-multiple {
+    margin-top: 9em;
+}
+
 .slider-multiple .slider.flexslider {
     display: none;
 }
@@ -614,6 +619,10 @@ dl.actionMenu.activated dt a{
     margin-top: -3.75em;
     z-index:1;
 }
+
+#accueil .slider-multiple {
+    margin-top: 9em;
+}
 .slider-multiple .carousel.flexslider .flex-direction-nav a,
 .slider-carousel .flex-direction-nav a{
     display: block;
@@ -652,6 +661,20 @@ dl.actionMenu.activated dt a{
 .slider-multiple .carousel.flexslider .flex-direction-nav .flex-next,
 .slider-carouse .flex-direction-nav .flex-next {
     margin-left: -10px;
+}
+
+#portal-columns #content #flex .flexslider a.flex-next, #portal-columns #content #flex .flexslider a.flex-prev {
+    height: 100% !important;
+    width: 100% !important;
+    float: left;
+    margin: 0;
+    padding: 0;
+    color: transparent !important;
+    text-shadow: none;
+}
+#content #flex .flexslider a.flex-next:before, #content #flex .flexslider a.flex-prev:before{
+   position: absolute;
+   left:40%;
 }
 .voir-tout {
     background: @theme !important;
@@ -1053,9 +1076,14 @@ dl.actionMenu.activated dt a{
 
 // event
 .event.summary.details {
-    float: right;
-    width: 30%;
+    float: left;
+    width: auto;
+    margin-left: 0 !important;
+    border-bottom: 1px solid #f2f2f2;
+    border-left: 1px solid #f2f2f2;
+    width:99%;
 }
+
 
 #content-core .event.summary.details,
 #content-core .event.summary.details ul{
@@ -1074,6 +1102,14 @@ dl.actionMenu.activated dt a{
     margin-bottom: 0px !important;
     border-color: #f2f2f2;
     border-style: solid;
+    width: 50%;
+    float: left;
+    margin-left: -1px;
+    box-sizing: border-box;
+}
+
+.event-calendar {
+    display: none !important;
 }
 
 .event_contacts a {
