--- a/cpskin/diazotheme/spirit/static/less/styles.less
+++ b/cpskin/diazotheme/spirit/static/less/styles.less
@@ -253,6 +253,7 @@ h1, h2, h3, h4, h5, h6, #portal-globalnav li a {
     position: absolute;
     right: -3%;
     width: 1px;
+    top: 6px;
 }
 .theme1,
 .theme2,
